Bug 79540 - Corruption: DOCX: File gets corrupt after Roundtrip
Summary: Corruption: DOCX: File gets corrupt after Roundtrip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: pallavi.jadhav
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-02 11:14 UTC by pallavi.jadhav
Modified: 2014-06-12 05:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
One WordArt inside table and second WordArt outside table (25.66 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-02 11:14 UTC, pallavi.jadhav
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pallavi.jadhav 2014-06-02 11:14:56 UTC
Created attachment 100288 [details]
One WordArt inside table and second WordArt outside table

Steps to Reproduce :
1] Open .docx in LO
2] Perform save_as to DOCX
3] Open saved file in MS Office-2010

Current behavior :
File gets corrupt after RT

Expected behavior :
File should get open without corruption on MS Office-2010
Comment 1 Jorendc 2014-06-03 20:32:20 UTC
Repro, Version: 4.4.0.0.alpha0+
Build ID: b447687292334687a371b66d7ad56ba9662b898e
TinderBox: Win-x86@39, Branch:master, Time: 2014-06-03_06:24:04
Comment 2 Commit Notification 2014-06-11 08:23:01 UTC
Pallavi Jadhav committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=69ba8e94e33c142072920fe455899c04b4e035d1

fdo#79540 : DOCX: Lo exports Drawing inside Drawing



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.