fdo#79540 : DOCX: Lo exports Drawing inside Drawing

Issue :
	- In file there is a WordArt inside Table.
	- In RT, LO exports <w:drawing> inside <w:drawing>.
	- The xml sequence was :
  	  <mc:AltrnateContent>
            <mc:Choice>
              <w:drawing>                // first start of drawing
                <w:txbxContent>
                  <w:tbl>
                    <w:drawing>   // second start of drawing. MSO does not allow.

	Implementation :
	- In DocxAttributeOutput::OutputFlyFrame_Impl() under "case sw::Frame::eDrawing",
	  if drawing is already open then Postpone the Inner Drawing.
	- Added Export Unit Test case to check two separate drawings are
          now written in document.xml of RT.

Change-Id: I01d06621576d60d26cd51489ee9718dd79eb9c72
Reviewed-on: https://gerrit.libreoffice.org/9653
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>